syntax = "proto3";

option go_package = "github.com/ebilsanta/social-network/backend/post_service/proto";

import "google/protobuf/timestamp.proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (Post) {}
  rpc GetPost (GetPostRequest) returns (Post) {}
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse) {}
  rpc GetPostByUserID (GetPostByUserRequest) returns (GetPostsResponse) {}
}

message CreatePostRequest {
  string caption = 1;
  string imageURL = 2;
  int64 userId = 3;
}

message Post {
  int64 id = 1;
  string caption = 2;
  string imageURL = 3;
  int64 userID = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp deletedAt = 6;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostsRequest {}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetPostByUserRequest {
  int64 id = 1;
}
